app-teams/team-alpha/cace-1-dev/demo-app/jenkins-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins
  namespace: team-alpha-jenkins
spec:
  hosts:
    - jenkins.cace-1-dev.dramisinfo.com
  gateways:
    - istio-system/shared-gateway
  http:
    - route:
        - destination:
            host: jenkins
            port:
              number: 8080
